--- a/css/style.css
+++ b/css/style.css
@@ -10,39 +10,34 @@
 
 /* Base */
 
-.link{
-    color: var(--color-basic);
-    font-family: 'Roboto';
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 16px;
-        letter-spacing: 0.02em;
-    text-decoration: none;
-
-}
-.link:hover,
-.link:focus,
-.link:active{
-    color: var(--color-acсent);
-}
-
-.link.current {
-color: var(--color-acсent);
-}
-
 body{
     font-family: 'Roboto', sans-serif;
     background-color: var(--base-background);
     color: var(--color-second);
+    font-size: 14px;
+    letter-spacing: 0.03em;
+    
 }
 
-.title{
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 42px;
-        text-align: center;
-        letter-spacing: 0.03em;
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
 
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+
+.section-title{
+        font-size: 36px;
+        line-height: 1.17;
+        text-align: center;
         color: var(--color-basic);
 }
 
@@ -51,12 +46,37 @@ body{
 }
 /* Header */
 
+.nav-link,
+.contact-link{
+text-decoration: none;
+font-weight: 500;
+line-height: 1.14;
+letter-spacing: 0.02em;
+
+}
+
+.contact-link{
+    color: #757575;
+}
+.nav-link:hover,
+.nav-link:focus,
+.nav-link:active {
+    color: var(--color-acсent);
+}
+
+.contact-link:hover,
+.contact-link:focus,
+.contact-link:active {
+    color: var(--color-acсent);
+}
+.nav-link.current {
+    color: var(--color-acсent);
+}
 .logo{
 font-family: 'Raleway', sans-serif;
 font-weight: 700;
 font-size: 26px;
-line-height: 31px;
-letter-spacing: 0.03em;
+line-height: 1.19;
 text-decoration: none;
 
 }
@@ -77,14 +97,13 @@ color: #000;
 .hero,
 .footer{
     background-color: #2f303a;
-
 }
 
 .hero-title{
     color: var(--color-third);    
         font-weight: 900;
         font-size: 44px;
-        line-height: 60px;
+        line-height: 1.36;
         text-align: center;
         letter-spacing: 0.06em;
         text-transform: uppercase;
@@ -94,13 +113,13 @@ color: #000;
     color: var(--color-third);
     background-color: var(--color-acсent);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        border-radius: 4px;
-            font-size: 16px;
-            line-height: 30px;
-            text-align: center;
-            letter-spacing: 0.06em;
-            font-family: inherit;
-            cursor: pointer;
+     border-radius: 4px;
+     font-size: 16px;
+     line-height: 1.87;
+     text-align: center;
+    letter-spacing: 0.06em;
+    font-family: inherit;
+    cursor: pointer;
 }
 
 .button:hover,
@@ -112,26 +131,16 @@ background-color: var(--button-background);
 /* Features */
 
 
-.hide {
-    opacity: 0;
-}
 
-.list-title{
-font-weight: 700;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.03em;
+.features-title{
+line-height: 1.14;
 text-transform: uppercase;
-
 color: var(--color-basic) ;
 }
 
-.list-text{
+.features-text{
 font-size: 14px;
-line-height: 24px;
-letter-spacing: 0.03em;
-
-color: var(--color-second);
+line-height: 1.71;
 }
 
 /* Team */
@@ -143,18 +152,13 @@ color: var(--color-second);
 .team-title{
 font-weight: 500;
 font-size: 16px;
-line-height: 19px;
-letter-spacing: 0.03em;
-
+line-height: 1.19;
 color: var(--color-basic);
 }
 
 .team-text{
 font-size: 16px;
-line-height: 19px;
-letter-spacing: 0.03em;
-
-color: var(--color-second);
+line-height: 1.19;
 }
 
 .team-card{
@@ -166,9 +170,7 @@ background-color: var(--base-background);
 /* Footer */
 
 .contacts{
-        font-size: 14px;
-        line-height: 24px;
-        letter-spacing: 0.03em;
+ font-style: normal;
 }
 
 .contacts-link{
@@ -184,6 +186,7 @@ color: var(--color-acсent);
 
 .address{
     color: var(--color-third);
+    text-decoration: none;
 }
 
 /* Portfolio */
@@ -197,6 +200,12 @@ color: var(--color-acсent);
         text-align: center;
         letter-spacing: 0.03em;
         cursor: pointer;
+        font-family: inherit;
+}
+
+.button-nav.current{
+color: var(--color-third);
+background-color: var(--color-acсent);
 }
 
 .button-nav:hover,
@@ -212,16 +221,13 @@ border: 1px solid #EEEEEE;
 }
 
 .menu-title{
-font-weight: 700;
     font-size: 18px;
-    line-height: 36px;
+    line-height: 2;
     letter-spacing: 0.06em;
     color: var(--color-basic);   
 }
 
 .menu-text{
 font-size: 16px;
-line-height: 30px;
-letter-spacing: 0.03em;
-color: var(--color-second);
+line-height: 1.87;
 }
